# twitter-clone

./: README.md  db.sqlite3  pyproject.toml
auth_app/: forms.py  views.py
notification_app/: models.py  views.py
notification_app/migrations/: 0001_initial.py  0002_notification_msg_content.py  0003_notification_receiver.py
static/css/: style.css
templates/: base.html  generic.html  index.html  notifications.html  profile.html  public_tweet.html  tweet.html
tweet_app/: admin.py  forms.py  models.py  views.py
tweet_app/migrations/: 0001_initial.py  0002_tweet_tweeter.py
twitterclone/: settings.py  urls.py
twitteruser_app/: admin.py  apps.py  models.py  views.py
twitteruser_app/migrations/: 0001_initial.py
