[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = "twitter clone that I made while a student at Kenzie"
authors = ["Kenneth Scribner"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"

[tool.poetry.dev-dependencies]
Django = "^3.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
